# neun_py

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  Makefile  README.md  __init__.py  add_model.py  build.sh  generate_pybinds.py  mkdocs.yml  models.json  pyproject.toml  setup.py
.github/workflows/: docs.yml
docs/: index.md  license.md
docs/api/: core.md  neurons.md  synapses.md
docs/development/: architecture.md  contributing.md
docs/getting-started/: building.md  installation.md  quickstart.md
docs/guide/: adding-models.md  basic-usage.md  models.md  synapses.md
examples/: basic.py  hindmarsh-rose-basic.py  izhikevich-basic.py  synapsis.py  test_examples.py
include/neun/archetypes/: SystemArchetype.h
include/neun/models/: ChemicalSynapsisModel.h
include/neun/wrappers/: IntegratedSystemWrapper.h
