[build-system]
requires = [
    "setuptools>=61",  # PEP 621 metadata support
    "wheel",
    "pybind11>=2.6.0"
]
build-backend = "setuptools.build_meta"

# Project metadata (PEP 621)
[project]
name = "neun_py"
dynamic = [
    "version",
    "description",
    "readme",
    "authors",
    "dependencies"
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.7"

[project.optional-dependencies]
examples = ["matplotlib>=3.0.0"]
full = ["matplotlib>=3.0.0"]